--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="confirmnodelete">Annuler</string>
     <string name="confirmdelete">Supprimer</string>
     <string name="textEmptyList">La liste est vide.\n Cliquez ici pour ajouter un contact -></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="fragmentListUserName">Liste de contact</string>
+    <string name="fragmentAddUserName">Ajouter un contact</string>
 </resources>
